--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,105 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: grey;
+    margin: 0px;
+}
+
+.container {
+    width: 100%;
+    background: grey;
+}
+
+nav,
+section {
+    float: left;
+    margin: 3px;
+    // padding: 20px;
+    min-height: 500px;
+    box-sizing: border-box;
+    width: 80%;
+    // padding-top: 30px;
+    
+}
+
+nav {
+    width: 19%;
+    background: white;
+    padding: 5px;
+    margin-top: 14px;
+    border-radius: 5px;
+    
+}
+
+.content .mission-name {
+    white-space: nowrap; 
+    width: 185px; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    
+  }
+
+section .content p  span{
+    font-weight:bold;
+}
+
+/* .clearfix{
+  content: '.';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+} */
+
+nav p {
+    margin: auto;
+    border-bottom: 1px solid;
+    width: 120px;
+    text-align: center;
+}
+
+
+nav li {
+    display: inline-block;
+    width: 40%;
+    background: darkgray;
+    padding: 5px;
+    text-align: center;
+    margin: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+ 
+}
+
+
+.errorbox {    
+    border: 1px solid red;
+    text-align: center;
+    min-height: 50px;
+}
+section .col {
+    width: 20%;
+    min-height: 300px;
+    background: white;
+    border: 1px solid;
+    border-radius: 5px;
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+}
+
+section .col img {
+    background: darkgray;
+    width: 100%;
+    height: auto;
+    display:block;
+    margin:auto;
+    border-radius: 5px;
+}
+
+footer {
+    text-align: center;
+    padding: 5px;
+}
