--- a/src/app/components/space-list/space-list.component.html
+++ b/src/app/components/space-list/space-list.component.html
@@ -21,26 +21,26 @@
         <nav>
             <p>Launch year</p>
             <ul>
-                <li *ngFor="let year of years; let i = index" (click)=filter(100,true,true,year)>
+                <li *ngFor="let year of years; let i = index" (click)=filter(100,true,true,year) [routerLink]="[]" [queryParams]="{ lyear: year }">
                     {{year}}
                 </li>
 
             </ul>
             <p>Sucessful Launch </p>
             <ul>
-                <li (click)=filter(100,true,null,null)>
+                <li (click)=filter(100,true,null,null) [routerLink]="[]" [queryParams]="{ launch: true }">
                     True
                 </li>
-                <li (click)=filter(100,false,null,null)>
+                <li (click)=filter(100,false,null,null) [routerLink]="[]" [queryParams]="{ launch: false }">
                     False
                 </li>
             </ul>
             <p>Sucessful Landing </p>
             <ul>
-                <li (click)=filter(100,true,true,null)>
+                <li (click)=filter(100,true,true,null) [routerLink]="[]" [queryParams]="{ land: true }">
                     True
                 </li>
-                <li (click)=filter(100,null,false,null)>
+                <li (click)=filter(100,null,false,null) [routerLink]="[]" [queryParams]="{ land: false }">
                     False
                 </li>
             </ul>
@@ -53,7 +53,7 @@
 
                     <img src="{{item.links.mission_patch_small}}" alt="" width="150px">
                     <div class="content">
-                        <p class="mission-name">{{item.mission_name}} #{{item.flight_number}}</p>
+                        <p>{{item.mission_name}} #{{item.flight_number}}</p>
                         <p><span>Mission Ids :</span> {{item.mission_id}}</p>
                         <p><span>Launch year :</span> {{item.launch_year}}</p>
                         <p><span>Successful Launch  :</span> {{item.launch_success}}</p>
