--- a/src/app/components/space-list/space-list.component.html
+++ b/src/app/components/space-list/space-list.component.html
@@ -53,14 +53,14 @@
 
                     <img src="{{item.links.mission_patch_small}}" alt="" width="150px">
                     <div class="content">
-                        <p>{{item.mission_name}} #{{item.flight_number}}</p>
-                        <p><span>Mission Ids :</span> {{item.mission_id}}</p>
+                        <p class="mission-name">{{item.mission_name}} #{{item.flight_number}}</p>
+                        <p class="mission-id"><span>Mission Ids :</span> {{item.mission_id}}</p>
                         <p><span>Launch year :</span> {{item.launch_year}}</p>
                         <p><span>Successful Launch  :</span> {{item.launch_success}}</p>
                         <p><span>Successful Landing  :</span> {{item.rocket.first_stage.cores[0].land_success}}</p>
                     </div>
                 </div>
-                <button (click)=loadMore(pageNo)>Load More</button>
+                <button class="loadmore" (click)=loadMore(pageNo)>Load More</button>
             </div>
         </section>
     </div>
