--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ body {
 .container {
     width: 100%;
     background: grey;
+    padding: 50px;
 }
 
 nav,
@@ -33,13 +34,12 @@ nav {
     
 }
 
-.content .mission-name {
+.content .mission-name, .mission-id{
     white-space: nowrap; 
     width: 185px; 
     overflow: hidden;
     text-overflow: ellipsis; 
-    
-  }
+}
 
 section .content p  span{
     font-weight:bold;
@@ -80,7 +80,7 @@ nav li {
     min-height: 50px;
 }
 section .col {
-    width: 20%;
+    width: 22%;
     min-height: 300px;
     background: white;
     border: 1px solid;
@@ -98,6 +98,15 @@ section .col img {
     margin:auto;
     border-radius: 5px;
 }
+
+section .loadmore {
+    float: right;
+    margin-right: 49px;
+    background: darkgray;
+    height: 28px;
+    border-radius: 5px;
+    cursor: pointer;
+} 
 
 footer {
     text-align: center;
