--- a/src/app/components/space-list/space-list.component.html
+++ b/src/app/components/space-list/space-list.component.html
@@ -51,7 +51,8 @@
 
                 <div class="col" *ngFor="let item of spaceData; let i = index">
 
-                    <img src="{{item.links.mission_patch_small}}" alt="" width="150px">
+                    <img *ngIf="!!item.links.mission_patch_small" src="{{item.links.mission_patch_small}}" alt="" width="150px">
+                    <img *ngIf="!item.links.mission_patch_small" src="/assets/images/no-img.png" alt="" width="150px">
                     <div class="content">
                         <p class="mission-name">{{item.mission_name}} #{{item.flight_number}}</p>
                         <p class="mission-id"><span>Mission Ids :</span> {{item.mission_id}}</p>
